.k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metaproject-zeus-api
  labels:
    app: metaproject-zeus-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metaproject-zeus-api
  template:
    metadata:
      labels:
        app: metaproject-zeus-api
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
      containers:
        - name: api
          image: ghcr.io/adamvalalsky/metaproject-zeus/api:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3000
