.k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metaproject-zeus-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: metaproject-zeus-api
